Aggiunti Alt Immagini

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                     <i class="fas fa-arrow-down"></i>
                 </div>
-                <img src="img/jumbo.png" alt="">
+                <img src="img/jumbo.png" alt="Anteprima interfaccia Dropbox">
             </div>
         </section>
 
@@ -182,7 +182,7 @@
         <!-- Partner Section -->
         <section id="partner">
             <div class="container_S clearfix">
-                <img src="img/partner.png" alt="">
+                <img src="img/partner.png" alt="Colleghi felici in ufficio, camminano e chiacchierano">
                 <div>
                     <h3>Entra in contatto con un partner Dropbox</h3>
                     <p>Trova unpartner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
@@ -197,37 +197,37 @@
                 <h2>Esegui più operazioni con Dropbox Business</h2>
 
                 <div class="bs-f-box">
-                    <img src="img/business-feature-switching-tools.png" alt="">
+                    <img src="img/business-feature-switching-tools.png" alt="Cartella personalizzata, contiene i dati personali dei dipendenti">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span class="underline">Dropbox Paper</span> direttamente da Dropbox</p>
                 </div>
 
                 <div class="bs-f-box c-margin">
-                    <img src="img/business-feature-coordinate-it.png" alt="">
+                    <img src="img/business-feature-coordinate-it.png" alt="Interfaccia Dropbox stilizzata">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span class="underline">Dropbox Paper</span> direttamente da Dropbox</p>
                 </div>
 
                 <div class="bs-f-box">
-                    <img src="img/business-feature-multi-device.png" alt="">
+                    <img src="img/business-feature-multi-device.png" alt="Interfaccia multi-device Dropbox stilizzata">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span class="underline">Dropbox Paper</span> direttamente da Dropbox</p>
                 </div>
 
                 <div class="bs-f-box">
-                    <img src="img/business-feature-integrations-it.png" alt="">
+                    <img src="img/business-feature-integrations-it.png" alt="Interfaccia integrazioni Dropbox stilizzata">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span class="underline">Dropbox Paper</span> direttamente da Dropbox</p>
                 </div>
 
                 <div class="bs-f-box c-margin">
-                    <img src="img/business-feature-send-files-it.png" alt="">
+                    <img src="img/business-feature-send-files-it.png" alt="Interfaccia invio file di Dropbox stilizzata">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span class="underline">Dropbox Paper</span> direttamente da Dropbox</p>
                 </div>
 
                 <div class="bs-f-box">
-                    <img src="img/business-feature-security.png" alt="">
+                    <img src="img/business-feature-security.png" alt="Caveau Dropbox">
                     <h3>Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span class="underline">Dropbox Paper</span> direttamente da Dropbox</p>
                 </div>
@@ -244,22 +244,22 @@
 
             <div class="tms-sq-b clearfix">
                 <div id="tms-DESIGNit">
-                    <img src="img/designit-white.svg" alt="">
+                    <img src="img/designit-white.svg" alt="Logo DesignIt">
                 </div>
                 <div id="tms-ASU">
-                    <img src="img/arizona_state_university.svg" alt="">
+                    <img src="img/arizona_state_university.svg" alt="Logo Arizona State University">
                 </div>
                 <div id="tms-UF">
-                    <img src="img/university_of_florida.svg" alt="">
+                    <img src="img/university_of_florida.svg" alt="Logo University of Florida">
                 </div>
                 <div id="tms-TOPPS">
-                    <img src="img/topps.svg" alt="">
+                    <img src="img/topps.svg" alt="Logo Topps">
                 </div>
             </div>
 
             <div class="tms-sq-c">
                 <div>
-                    <img src="img/designit.svg" alt="">
+                    <img src="img/designit.svg" alt="Logo DesignIt">
                 </div>
                 <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
                 <span>Morten Thomsen, Global IT Lead</span>
@@ -267,16 +267,16 @@
 
             <div class="tms-sq-b clearfix">
                 <div id="tms-WBR">
-                    <img src="img/world_bicycle_relief.svg" alt="">
+                    <img src="img/world_bicycle_relief.svg" alt="Logo World Bicycle Relief">
                 </div>
                 <div id="tms-HEARST">
-                    <img src="img/hearst_corp.svg" alt="">
+                    <img src="img/hearst_corp.svg" alt="Logo Hearts-Corporation">
                 </div>
                 <div id="tms-LonelyPlanet">
-                    <img src="img/lonely_planet.svg" alt="">
+                    <img src="img/lonely_planet.svg" alt="Logo Lonely Planet">
                 </div>
                 <div id="tms-ClearChannel">
-                    <img src="img/clear_channel.svg" alt="">
+                    <img src="img/clear_channel.svg" alt="Logo Clear Channel">
                 </div>
             </div>
         </section>
